<resources>
    <string name="app_name">AppTareas</string>
    <string name="et_mail">Email</string>
    <string name="et_password">Password</string>
    <string name="et_registrate">¿Eres nuevo? Registrate</string>
    <string name="btn_entrar">Entrar</string>
    <string name="txt_olvidado">¿Has olvidado tu contraseña?</string>
    <string name="Bienvenid">Bienvenid@!</string>
    <string name="idStringRegistrate">Regístrate</string>
    <string name="idStingEmail">Email</string>
    <string name="idEtEmail">Email</string>
    <string name="IdpTEmail">Dirección de correo</string>
    <string name="idEtPass">Contraseña</string>
    <string name="idEtConfCont">Confirmar contraseña</string>
    <string name="idCheck">Estoy de acuerdo con la </string>
    <string name="txtLOPD">LOPD</string>
    <string name="idBtnRegistrate">Registrarse</string>
    <!--Main -->
    <string name="msgVacio">"Llena el campo de email."</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Editar usuario -->
    <string name="lvNombre">Nombre</string>
    <string name="lvEmail">Correo electronico</string>
    <string name="lvContraseña">Contraseña</string>
    <string name="elmntTxt">Elemento</string>
    <string name="vacio" />
    <string name="txtEdit">Editar Elemento</string>
    <string name="btnDescrp">Subir</string>
    <string name="btnDescrpb">Bajar</string>
    <string name="btnDescrpDel">Eliminar</string>
    <string name="slogantxt">La app del desorden organizado</string>
    <string name="txtInfo">¿Ya tienes una cuenta?</string>
    <string name="txtEntrar">Entrar</string>
    <string name="idAñadirTarea">Añadir Tarea</string>
    <string name="idCompartir">Compartir Listas</string>
    <string name="idSubtituloCompartir">Con quién quieres compartirla?</string>
    <string name="idCompartirCon">Compartir con:</string>
    <string name="idEmailEjemplo">email@email.com</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnMas">+</string>
    <string name="btnGuardar">Guardar</string>
    <string name="logOut">Cerrar sesión</string>
    <string name="editPerfil">Editar perfil</string>
    <string name="strListasTl">Listas</string>
    <string name="tareaNombre">Nombre para la tarea</string>
    <string name="opciList">Opciones de lista</string>
    <string name="EditTareasView">Gestionar tareas</string>
    <string name="extEditarTareas">Salir de vista de edición</string>
</resources>