<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.FragmentCompartirLista">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/idTituloCompartir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/idCompartir"
        android:textColor="@color/azulApp"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTituloCompartir" />

    <TextView
        android:id="@+id/idSubtituloCompartir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="36dp"
        android:text="@string/idSubtituloCompartir"
        android:textColor="@color/azulApp"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/et_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idSubtituloCompartir" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="44dp"
        android:textColor="#050505"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/idCompartirCon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <Button
        android:id="@+id/idBtnAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:text="@string/btnAceptar"
        app:backgroundTint="@color/azulApp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/idBtnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:text="@string/btnCancelar"
        app:backgroundTint="@color/azulApp"
        app:layout_constraintBaseline_toBaselineOf="@+id/idBtnAceptar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/idBtnAceptar" />

    <Button
        android:id="@+id/addUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/btnMas"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextEmailAddress"
        app:layout_constraintStart_toEndOf="@+id/editTextTextEmailAddress"
        app:layout_constraintTop_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/multilineaUsuers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:fontFamily="@font/asap_medium"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/idBtnAceptar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>

